Limit initial input to 8 characters to prevent overflow

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     margin-left: 5px;
     margin-right: 5px;
     overflow: auto;
-    padding: 0px 15px;
+    padding: 0px 10px;
 }
 
 .calculator {
